Updates to html format as well as minor bug fixes